Major improvements:
* Added the ability to have read-only access to backups from other computers, both in the UI and using the command line.
* Also added the ability to cancel and resume a log rebuild.
* Made it possible to provide retention for files that are in the repository but are no longer part of any backup sets.
* Optimized log rebuilds to be between 3 and 10 times faster.
* Don't lock up for a long time when entering the wrong credentials in a destination.
* Added DEB and RPM installers for Linux.

Additional fixes.

* Made it possible to cancel search operations.
* Better metadata storage options for large repositories.
* All the up to and including stable release 1.0.4.
* Validates destination credentials when changing configurations.
* Upgraded to Java 17 and also upgrade all other libraries to latest versions.